feat: add gcalcli (Google Calendar CLI) as step 10
Add interactive OAuth walkthrough for gcalcli setup:
- New step file with installation and OAuth instructions
- Updated CLAUDE.md with interactive guidance for OAuth setup
- Added gcalcli to optional_tools in config.example.json
- Updated README.md tools list

--- a/config.example.json
+++ b/config.example.json
@@ -18,6 +18,7 @@
       "linear_mcp": true,
       "notion_mcp": true,
       "playwright": true,
+      "gcalcli": true,
       "figma_mcp": false,
       "database_tools": false,
       "docker": false,
