feat(06-01): add mprocs to config.example.json
- Add mprocs: false to optional_tools section
- Documents mprocs as available option for new users

--- a/config.example.json
+++ b/config.example.json
@@ -19,6 +19,7 @@
       "claude_yolo": true,
       "claude_notify": true,
       "get_shit_done": false,
+      "mprocs": false,
       "gastown": false,
       "beads": false,
       "linear_mcp": false,
